Microcontroladores/Projetos/.metadata/.plugins/org.eclipse.cdt.ui/Projeto Encoders.build.log
19:50:50 **** Incremental Build of configuration Debug for project Projeto Encoders ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:18: error: void value not ignored as it ought to be
  104 |           Verify = TIM2_IRQHandler();
      |                  ^
In file included from ../Core/Inc/stm32l0xx_hal_conf.h:273,
                 from ../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'Encoder_Init':
../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_tim.h:563:50: warning: passing argument 2 of 'HAL_TIM_Encoder_Init' makes pointer from integer without a cast [-Wint-conversion]
  563 | #define TIM_ENCODERMODE_TI12                     (TIM_SMCR_SMS_1 | TIM_SMCR_SMS_0)                                   /*!< Quadrature encoder mode 3, x4 mode, counts up/down on both TI1FP1 and TI2FP2 edges depending on the level of the other input. */
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  long unsigned int
../Core/Src/main.c:235:39: note: in expansion of macro 'TIM_ENCODERMODE_TI12'
  235 |     if (HAL_TIM_Encoder_Init(&htim22, TIM_ENCODERMODE_TI12) != HAL_OK)
      |                                       ^~~~~~~~~~~~~~~~~~~~
../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_tim.h:1704:96: note: expected 'const TIM_Encoder_InitTypeDef *' but argument is of type 'long unsigned int'
 1704 | HAL_StatusTypeDef HAL_TIM_Encoder_Init(TIM_HandleTypeDef *htim, const TIM_Encoder_InitTypeDef *sConfig);
      |                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

19:50:50 Build Failed. 2 errors, 1 warnings. (took 434ms)

